# phoenix-sar

./: .gitignore  CMakeLists.txt  README.md  RUNBOOK.md  package.xml
config/: mapper_params_localization.yaml  my_controllers.yaml  nav2_params.yaml
description/: lidar.xacro  ros2_control.xacro
firmware/esp32_diff_drive/: esp32_diff_drive.ino
launch/: explore_launch.py  full_nav_launch.py  launch_robot.launch.py  localization_launch.py  maze_mission_launch.py  navigation_launch.py  online_async_launch.py  rplidar.launch.py  slam_launch.py  slam_nav_launch.py
phoenixIMPPF/phoenixIMPPF/: 01_firmware_and_calibration.md  02_data_collection_procedure.md  03_phoenix_logger.py  04_imppf_prototype.py  Simulator3.py  new.c  run_imppf.bat
scripts/: camera_detector_node.py  phoenix_circle.py  phoenix_dashboard.py  phoenix_explorer.py  phoenix_forward.py  phoenix_launcher.py  rtt_csi_odom_logger.py
